test/corpus/code.txt
================================================================================
codeblock with brace inside string
================================================================================

:-
{
x = "}"
}

--------------------------------------------------------------------------------

(lexer
  (scanner
    (bind))
  (code
    (code_block)))
