test/corpus/escaped_characters.txt
================================================================================
Escaped whitespace
================================================================================

:-
[\ ] ();

--------------------------------------------------------------------------------

(lexer
  (scanner
    (bind)
    (tokendef
      (rule
        (context
          (rexp
            (set
              (set
                (escaped_character)))))
        (rhs)))))
