test/corpus/startcodes.txt
================================================================================
startcode with number
================================================================================

:-
<example1> {
}

--------------------------------------------------------------------------------

(lexer
  (scanner
    (bind)
    (tokendef
      (startcodes
        (startcode
          (identifier))))))
